# mytest

autotoolstest/myauto/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  helloworld  helloworld.c  output.c
autotoolstest/myauto/.deps/: helloworld.Po  output.Po
autotoolstest/myauto/autom4te.cache/: output.1  requests  traces.0  traces.1
autotoolstest/myauto/autotest/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  get.c  get.h  hello  main.c  sum.c  sum.h  val.c  val.h
autotoolstest/myauto/autotest/.deps/: get.Po  main.Po  sum.Po  val.Po
autotoolstest/myauto/autotest/autom4te.cache/: output.1  requests  traces.0  traces.1
autotoolstest/shallowauto/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  hello  main.c
autotoolstest/shallowauto/.deps/: main.Po
autotoolstest/shallowauto/autom4te.cache/: output.1  requests  traces.0  traces.1
autotoolstest/shallowauto/include/: common.h  get.h  sum.h  val.h
autotoolstest/shallowauto/src/: Makefile  Makefile.am  Makefile.in  get.c  sum.c  val.c
errortest/: main.c  test.c
script_test/settings/: message.txt  replace_script.sh
script_test/settings/alerts/: globalsetting  setting
script_test/settings/backup/: settings-0
script_test/settings/customalarms/: alarm-1  alarm-2  config
script_test/settings/flood/: cleanrules  config  setting
small/: makefile  test.c.old  test_and.c
small/color_test/: color_test.c
small/make.so/: hello  hello.c  hello.h  main.c
small/pthread_debug/: test.c
(+130 files in other folders)
